<resources>
    <string name="app_name">StatusView</string>
    <string name="my_status">My Status</string>
    <string name="viewed_update">Viewed update</string>
    <string name="type_a_status">Type a status</string>
    <string name="text_font_change">T</string>
    <string name="background_style">Background Style</string>
    <string name="font_style">Font Style</string>
    <string name="CustomEmojiCategoryName">CEmoji</string>
    <string name="capture">Capture</string>
    <string name="preview_area">Preview Area</string>
    <string name="hold_for_video_tap_for_photo">Hold for video, tap for photo</string>
    <string name="recent">Recent</string>
    <string name="select_video">Select Video</string>

    <string name="selected_video_thumbnail">Selected Video\'s Thumbnail</string>
    <string name="all_stickers">All Stickers</string>
    <string name="my_stickers">My Stickers</string>
    <string name="sticker_icon">sticker_icon</string>
    <string name="share_location">Share Location</string>
    <string name="send">Send</string>
    <string name="enter_location_city">Enter Location / City</string>
    <string name="viewed_by">Viewed By</string>
    <string name="your_status_updates_will_disappear_after_24_hours">Your status updates will disappear after 24 hours.</string>
    <string name="delete">Delete</string>
    <string name="no_sticker_pack_please_download">No Sticker Pack, Please Download.</string>
</resources>